--- a/vodextask/src/Components/Home1/home1.css
+++ b/vodextask/src/Components/Home1/home1.css
@@ -4,7 +4,7 @@
     display:flex;
     justify-content: space-evenly;
     position:relative;
-    margin: 3px;
+    /* margin: 3px; */
     width: 100vw;
     height: 84px;
     align-items: center;
@@ -12,10 +12,6 @@
     z-index: 20;
     background-color: white;
   }
-  
-  
-  
-  
   .logo-container{
     width: 100%;
     height: 49px;
